ADD: First commit

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,12 +1,15 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
-</ion-header>
+<ion-content>
+  <ion-row class="ribbon">
+    <ion-col col-8>
 
-<ion-content padding>
+    </ion-col>
+    <ion-col col-2>
+      21º C
+    </ion-col>
+    <ion-col col-2>
+      <i class="wi wi-night-snow-thunderstorm"></i>
+    </ion-col>
+  </ion-row>
   The world is your oyster.
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
