--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,12 +1,12 @@
 <ion-content>
   <ion-row class="ribbon">
     <ion-col col-8>
-
+      <marquee behavior="scroll" direction="left">Forever & Always - Markis Precise, The Grouch</marquee>
     </ion-col>
-    <ion-col col-2>
+    <ion-col col-2 class="temperature-text">
       21º C
     </ion-col>
-    <ion-col col-2>
+    <ion-col col-2 class="temperature-icon">
       <i class="wi wi-night-snow-thunderstorm"></i>
     </ion-col>
   </ion-row>
